# r-type_menu

./: CMakeLists.txt  Doxy_RType-config  Game_compents_and_entities  R-Type Network Protocol.txt  README.md  build.sh  clean.sh  conanfile.txt
Client/Display/: IDisplay.hpp  MyLib.hpp
Client/include/: CreateEntities.hpp  Parallax.hpp
Client/includes/: Client.hpp
Client/src/: Client.cpp  CreateEntities.cpp  Main.cpp  MyLib.cpp  main.cpp
Server/includes/: game.hpp  server.hpp
Server/src/: CallClient.cpp  Interpreter.cpp  Main.cpp  Server.cpp  VectorOp.cpp  game.cpp
docs/html/: Client_8hpp_source.html  Entity_8hpp_source.html  Parallax_8hpp_source.html  Registry_8hpp_source.html  Sparse__array_8hpp_source.html  Systems_8hpp_source.html  annotated.html  classGame.html  classMyComponents_1_1DrawEnemySystem-members.html  classMyComponents_1_1DrawEnemySystem.html  classMyComponents_1_1DrawSpriteSystem-members.html  classMyComponents_1_1DrawSpriteSystem.html  classMyComponents_1_1DrawSystem-members.html  classMyComponents_1_1DrawSystem.html  classMyComponents_1_1MoveEnemy-members.html  classMyComponents_1_1MoveEnemy.html  classMyComponents_1_1MoveSystem-members.html  classMyComponents_1_1MoveSystem.html  classMyComponents_1_1ScrollingClass-members.html  classMyComponents_1_1ScrollingClass.html  classNetWorkClient-members.html  classNetWorkClient.html  classNetWorkServer-members.html  classNetWorkServer.html  classRegistry-members.html  classRegistry.html  classSparse__array-members.html  classes.html  (+35 more)
files/: Parallax.hpp  main.cpp
menu/: build.sh  main.cpp  sfml-app
(+71 files in other folders)
